<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true"
    android:id="@+id/project_layout"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="title"
                    android:id="@+id/poem_post_title"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:layout_marginRight="5dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_gravity="right"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_size_small"
                        android:layout_gravity="right"
                        android:textColor="@color/schemeDarkGray"
                        android:text="@string/days"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_size_small"
                        android:layout_marginRight="5dp"
                        android:textColor="@color/schemeDarkGray"
                        android:text="posted date"
                        android:id="@+id/posted_date"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:layout_marginLeft="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:gravity="right"
                        android:layout_gravity="right"
                        android:textSize="@dimen/font_size_small"
                        android:textColor="@color/schemeDarkGray"
                        android:text="@string/remained_duration"/>
                </LinearLayout>
            </LinearLayout>


            <ir.weproject.freelance.helper.RoundedNetworkImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@android:drawable/btn_star"
                android:id="@+id/employer_image"
                android:layout_marginRight="5dp"
                android:background="@null" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bidNoLayout"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_small"
                android:textColor="@color/schemeGray"
                android:text="@string/toman"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/initial_cost"
                android:layout_marginLeft="3dp"
                android:text="5000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_small"
                android:textColor="@color/schemeGray"
                android:layout_marginLeft="3dp"
                android:text="@string/budget"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/material_blue_grey_800"
                android:layout_weight=".9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_small"
                android:textColor="@color/schemeGray"
                android:text="@string/days"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/initial_duration"
                android:layout_marginLeft="3dp"
                android:text="4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/schemeGray"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="5dp"
                android:textSize="@dimen/font_size_small"
                android:text="@string/initial_duration"/>

        </LinearLayout>

    </RelativeLayout>

    <!--count and avg of bids-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/avg_bids"
            android:layout_marginLeft="3dp"
            android:text="10000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:textSize="@dimen/font_size_small"
            android:textColor="@color/schemeGray"
            android:text="@string/bids_avg"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:layout_margin="5dp"
            android:background="@color/material_blue_grey_800" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/count_bids"
            android:text="5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textSize="@dimen/font_size_small"
            android:textColor="@color/schemeGray"
            android:layout_marginLeft="3dp"
            android:text="@string/bids_count"/>

    </LinearLayout>


    <!--Skills should place here-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/neededSkills"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:text="Android"/>

    </LinearLayout>

    </LinearLayout>

</RelativeLayout>
